apps/media-downloaders/radarr/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media-downloaders
spec:
  serviceName: radarr
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr
          ports:
            - name: "http"
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /data
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-media
          persistentVolumeClaim:
            claimName: radarr-media
