apps/media-downloaders/radarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-downloaders
  labels:
    app: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 7878
      port: 7878
